--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 /* Styles for the body */
 
 body {
-	font-family: Lato, "Open Sans", Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Roboto Slab', serif;
 	color: #202030;
 	background-color: #028E9C;
 }
