--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 /* Styles for the body */
 
 body {
-	font-family: 'Roboto Slab', serif;
+	font-family: 'comic', serif;
 	color: #202030;
 	background-color: #028E9C;
 }
