--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@
 /* Styles for the body */
 
 body {
-	font-family: 'comic', serif;
-	color: #202030;
+	font-family: 'Blaka', cursive;
+font-family: 'Lobster', cursive;
+	color: #1142AA;
 	background-color: #028E9C;
 }
 
